# bootcamp-python-projetos

./: README.md
projetos_aula01/: Desafio.py  exemplo_01.py  exemplo_02.py
projetos_aula02/: Desafio.py  exercicios_Bool.py  exercicios_float.py  exercicios_int.py  exercicios_string.py  exercicios_try-except_e_if.py
projetos_aula03/: Desafio.py  lista_exercicios.py
projetos_aula04/: Desafio.py  dataset.csv  exemplo_dict.py  exemplo_list.py  funcao.py  ler_arquivo_csv.py
projetos_aula05/: README.md
projetos_aula06/: README.md
projetos_aula06/Funcoes/: exemplo_00.py
projetos_aula07/: etl.py  exercicios.py  main.py
projetos_aula08/: etl.py  pipeline.py  pyproject.toml
projetos_aula09/: pyproject.toml
projetos_aula11-15/: exercicios.py
projetos_aula11-15/Praticando/basics/: pessoa-class.py
projetos_aula11-15/aula12/: examplo2.csv
projetos_aula11-15/aula13-14/src/lib/classes/: CsvSource.py
projetos_aula16/: 01-create.py  02-delete.py  03-read_1.py  03-read_2.py  04-drop.py  database.db  main.py  pyproject.toml
projetos_aula17/: desafio.db  desafio.py  exemplo_01.py  meubanco.db  pyproject.toml  querys_desafio.py  querys_desafio.sql
projetos_aula18/: exemplo_00.py  pokemon.db  pyproject.toml  query_table_pokemons.sql
projetos_aula18/src/: models.py  schema.py
projetos_aula19/: pyproject.toml  query_db.sql  test.db
projetos_aula20/: README.md
