[project]
name = "projetos-aula08"
version = "0.1.0"
description = "Estudo bootcamp python aula 08"
authors = [
    {name = "Rafael Souza",email = "rafasansou1@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "pandera (>=0.23.1,<0.24.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
